--- a/R/get_stability_with_envdata.html
+++ b/R/get_stability_with_envdata.html
@@ -1636,7 +1636,7 @@ pre code {
 <h1 class="title toc-ignore">WP2 code to get a summary table for
 community-stability and related environmental data</h1>
 <h4 class="author">Shyamolina</h4>
-<h4 class="date">11 August, 2022</h4>
+<h4 class="date">25 August, 2022</h4>
 
 </div>
 
@@ -1653,10 +1653,17 @@ community-stability and related environmental data</h1>
 <div id="code-availability" class="section level1">
 <h1>CODE AVAILABILITY</h1>
 <p>Complete computer code written in R programming language for this
-project is at <a href="https://github.com/sghosh89/WP2" class="uri">https://github.com/sghosh89/WP2</a>. This Rmd file genarates
+project is at <a href="https://github.com/sghosh89/WP2" class="uri">https://github.com/sghosh89/WP2</a>. This Rmd file generates
 the summary table <em>stability_metric_and_env_all.csv</em> required for
 next step analysis and saves the csv file in <code>Results</code>
-folder.</p>
+folder. It also saves following 4 csv files in the <code>Results</code>
+folder:</p>
+<ul>
+<li><em>birds_splist_consistency_table.csv</em>,</li>
+<li><em>fish_splist_consistency_table.csv</em>,</li>
+<li><em>birds_splist_with_temp_sensitivity.csv</em>,</li>
+<li><em>fish_splist_with_temp_sensitivity.csv</em>.</li>
+</ul>
 </div>
 
 
