--- a/R/get_stability_with_envdata.html
+++ b/R/get_stability_with_envdata.html
@@ -1636,7 +1636,7 @@ pre code {
 <h1 class="title toc-ignore">WP2 code to get a summary table for
 community-stability and related environmental data</h1>
 <h4 class="author">Shyamolina</h4>
-<h4 class="date">05 October, 2022</h4>
+<h4 class="date">13 October, 2022</h4>
 
 </div>
 
@@ -1652,6 +1652,7 @@ community-stability and related environmental data</h1>
 <!--BioTIMEx data analysis-->
 <!--test some ideas related to STI-->
 <!--first, test with fish data-->
+<!--now, test with birds data-->
 <div id="code-availability" class="section level1">
 <h1>CODE AVAILABILITY</h1>
 <p>Complete computer code written in R programming language for this
