--- a/R/get_stability_with_envdata.html
+++ b/R/get_stability_with_envdata.html
@@ -1629,7 +1629,7 @@ pre code {
 <h1 class="title toc-ignore">WP2 code to get a summary table for
 community-stability and related environmental data</h1>
 <h4 class="author">Shyamolina</h4>
-<h4 class="date">02 August, 2023</h4>
+<h4 class="date">23 September, 2023</h4>
 
 </div>
 
@@ -1641,6 +1641,18 @@ community-stability and related environmental data</h1>
 <!-- BioTIME: data analysis within 1979-2019 timeperiod -->
 <!--NOTE: this r chunk cannot cache big object, it's not a problem in R, but in Rmd it is a problem, you can avoid it by setting cache.lazy=F, but then each time you will compile it will run this chunk and could take long time to compile, for details: see this thread: https://stackoverflow.com/questions/39417003/long-vectors-not-supported-yet-error-in-rmd-but-not-in-r-script -->
 <!--Alternative way, I am running the file get_BioTIME_data.R in simple R-script, it will save the necessary data in respective folder, and commenting out the following chunk-->
+<pre><code>## Warning: Using an external vector in selections was deprecated in tidyselect 1.1.0.
+## ℹ Please use `all_of()` or `any_of()` instead.
+##   # Was:
+##   data %&gt;% select(nd)
+## 
+##   # Now:
+##   data %&gt;% select(all_of(nd))
+## 
+## See &lt;https://tidyselect.r-lib.org/reference/faq-external-vector.html&gt;.
+## This warning is displayed once every 8 hours.
+## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
+## generated.</code></pre>
 <!--Roel's insect database-->
 <!--BioTIMEx data analysis-->
 <!--NOTE: following r chunk computes correlation between species abundance timeseries with temperature time series, it does not matter for the unit of temperature: Kelvin0.1 or celcius scale, having a linear relationship the correlation coeeficients will be exactly same, I checked that.-->
